syntax = "proto3";
package sola;

import "song.proto";

message Plugin {
  string host = 1;
  int32 port = 2;
  PluginInfo info = 3;
  map<string, string> plugin_parameters = 4;
  bool is_available = 5;

  enum PluginType {
    UNKNOWN = 0;
    ON_PLAYLIST = 1;
    ON_SAVED_SEARCH = 2;
    ON_PLAY_QUEUE = 3;
    ON_FILE_EXPLORE = 4;
    ON_BROWSER = 5;
    ON_FULL_TEXT_SEARCH = 6;
  }
}

message PluginInfo {
  string name = 1;
  string version = 2;
  string description = 3;
  string context_menu_title = 4;
  string context_menu_description = 5;
  repeated Plugin.PluginType supported_types = 6;
  repeated string required_plugin_parameters = 7;
  repeated string required_request_parameters = 8;
}

message PluginState {
  repeated Plugin plugins = 1;
}

message PluginRegisterRequest {
  string host = 1;
  int32 port = 2;
}

message PluginRegisterResponse {
  PluginInfo info = 1;
}

message PluginExecuteRequest {
  string host = 1;
  int32 port = 2;
  map<string, string> plugin_parameters = 3;
  map<string, string> request_parameters = 4;
  repeated Song songs = 5;
}

message PluginExecuteResponse {
  string message = 1;
  int32 progress_percentage = 2;
  Status status = 3;

  enum Status {
    UNKNOWN = 0;
    OK = 1;
    WARN = 2;
    // Throw an error for ERROR
  }
}